# servicenow-dish-iam-uplift

./: Config  Dockerfile  README.md  docker-compose.sh  docker-compose.yaml  docker_build_buildspec.yml  format.sh  requirements.txt  setup.py
access-analyzer/: .gitignore
access-analyzer/enablement/: account-analyzer.yaml  create-org-analyzer-stack-set.py  org-analyzer.yaml
assessment/: .gitignore  README.md  backport.md  backport.sh  check-guardrails-securityhub.py  check-guardrails.py  iam-roles-metrics.py  iam-roles-metrics.sh  iam_client.py  iamdeco.py  policy-validator.py  requirements.txt  security_hub_findings.py  sensitive-actions.txt  services-last-used.py  sso-policy-validator.py  submit-report.py
assessment-rust/: Cargo.toml
assessment-rust/src/: main.rs
config-rules/ImportedKeyMaterialRule/: README.md  create-key-evaluation-execution-role-stack-set.sh  create-organizational-config-rule.py  key_evaluation_execution_role.yaml
config-rules/ScheduleKeyDeletionAccessRule/: .gitignore  README.md  requirements.txt
config-rules/human-iam-users/: Pipfile  README.md  app.py  requirements.txt  setup.py  ssm.yaml
config-rules/iam-role-last-used/: .gitignore  README.md  app.py  iam-role.yaml  requirements.txt  setup.py
config-rules/lib/: config_recorder_helper.py
dependencies/codecommit/: .gitignore  Pipfile  app.py  push.sh  requirements.txt  setup.py
docs/: README.md
docs/delivery-kit/: .gitignore  access-analzyer-user-stories.md  artifacts.md  (+16 more)
guardrails/: generate-markdown.py
iam-event-monitor/: README.md  blacklist.py  iam_monitor.yml
(+204 files in other folders)
