[package]
name = "iam_roles_assessment"
version = "0.1.0"
authors = ["Josh Joy <jjjoy@amazon.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
futures = "0.3.4"
tokio = "0.2.11"
tokio-core = "0.1.17"
rusoto_core = "0.43.0-beta.1"
rusoto_iam = "0.43.0-beta.1"
rusoto_dynamodb = "0.43.0-beta.1"
serde_json = "1.0.48"
